[package]
name = "demo"
description = "Demo"
repository = ""
license = "MIT"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.30"
log = "0.4"
wgpu = { version = "0.20.1", features = ["webgl"] }
pollster = "0.3.0"
flume = "0.11.0"
bytemuck = { version = "1.16", features = ["derive"] }
console_log = "1.0"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
